# EditFoxEngine3D

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  cpp.hint
EditFoxEngine3D/: CMakeLists.txt  EFEDevice.cpp  EFEDevice.hpp  EFEModel.cxx  EFEModel.hpp  EFEPipeline.cpp  EFEPipeline.hpp  EFESwapChain.cxx  EFESwapChain.hpp  EFEWindow.cxx  EFEWindow.hpp  EditFoxEngine3D.cpp  EditFoxEngine3D.h  macros.h  utils.hpp  vma.cpp
EditFoxEngine3D/shaders/: simple_shader.vert
